--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-		<link rel="icon" href="/favicon.ico" sizes="32x32" />
+		<!-- Preconnect to external resources for faster loading -->
+		<link rel="preconnect" href="https://d2wlb52bya4y8z.cloudfront.net" crossorigin />
+		<link rel="dns-prefetch" href="https://d2wlb52bya4y8z.cloudfront.net" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
