Add read time, premium access expiry, and mobile UI improvements
- Add auto-calculated read time field to Posts collection with CMS beforeChange hook
- Add migration for read_time column in PostgreSQL
- Display read time on all article pages (homepage, read, author, tag, individual)
- Implement 30-day premium window: articles show "Free" after expiry
- Improve article page mobile layout with taller cover image (3:4 aspect)
- Redesign author byline section for mobile with stacked layout
- Add new Footer component and privacy/terms pages
- Add tag pages for filtering articles by topic
- Update Sidebar and various UI consistency improvements

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,10 @@
 		<!-- Preconnect to external resources for faster loading -->
 		<link rel="preconnect" href="https://d2wlb52bya4y8z.cloudfront.net" crossorigin />
 		<link rel="dns-prefetch" href="https://d2wlb52bya4y8z.cloudfront.net" />
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
